Update Group Project MLP.ipynb
made some edits

--- a/Group Project MLP.ipynb
+++ b/Group Project MLP.ipynb
@@ -24,32 +24,20 @@
    "outputs": [],
    "source": [
     "rawdata = pd.read_csv('diabetes.csv')\n",
-    "print(rawdata.head())\n",
     "df = rawdata[['diabetes']].copy()\n",
-    "df[\"diabetes\"].replace([\"No diabetes\", \"Diabetes\"], [0,1] , inplace=True)\n",
-    "#print(df.head())\n",
+    "df[\"diabetes\"].replace([\"No diabetes\", \"Diabetes\"], [0.1,0.9] , inplace=True)\n",
     "colsToNormalize = [\"cholesterol\", \"glucose\", \"hdl_chol\", \"age\", \"height\", \"weight\", \"systolic_bp\", \"diastolic_bp\", \"waist\", \"hip\"]\n",
     "for i in range(0,len(colsToNormalize)):\n",
-    "    #print(df.loc[:,colsToNormalize[i]])\n",
     "    df[colsToNormalize[i]] =(rawdata[colsToNormalize[i]] - rawdata[colsToNormalize[i]].mean())/rawdata[colsToNormalize[i]].std(ddof=False)\n",
     "\n",
-    "#df['gender'] = rawdata['gender']\n",
     "dummies = pd.get_dummies(rawdata.gender)\n",
-    "#print(dummies)\n",
     "df = pd.concat([df, dummies], axis = 'columns')\n",
     "\n",
-    "#splitData = rawdata['chol_hdl_ratio'].str.split(',', expand=True)\n",
-    "#df[chol_hdl_ratio] = splitData[0].astype(int)/splitData[1].astype(int)\n",
+    "#build training and test data\n",
+    "df_train = df.sample(frac=.8)\n",
+    "df_test = df.drop(df_train.index)\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b4e16a7c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -72,7 +60,6 @@
     "        self.previousOutputWeightDeltas = np.zeros((10,numHiddenNodes+1), dtype=float)\n",
     "        self.previousHiddenWeightDeltas = np.zeros((numHiddenNodes, numInputs), dtype=float)\n",
     "        self.debug = 0\n",
-    "        #self.p(self.weights)\n",
     "    \n",
     "    def train(self, data):\n",
     "        return self.run_epoch(data, 1)\n",
@@ -96,8 +83,7 @@
     "        print(label, object)\n",
     "            \n",
     "    def run_epoch(self, data, adjustWeights):\n",
-    "        #expectedList = np.array([.01,.99])\n",
-    "        #expectedList = [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]\n",
+    "        \n",
     "        self.p(\"data=\",data)\n",
     "        self.p(\"self.outputWeights=\",self.outputWeights)\n",
     "        expectedList = []\n",
@@ -106,20 +92,14 @@
     "        self.pp(\"##For each row of data\")\n",
     "        for i in range(0,data.shape[0]):\n",
     "            self.p(\"row=\",i)\n",
-    "            label = data[i,0].astype('int')\n",
-    "            #expectedOutputNodeList = [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]\n",
-    "            #set the bit for the label value to 1\n",
-    "            #expectedOutputNodeList[label] = 0.9\n",
+    "            label = data[i,0]\n",
     "            expectedOutputNodeList = []\n",
     "            expectedList.append(label)\n",
     "            expectedOutputNodeList.append(label)\n",
     "            self.p(\"expectedList=\", expectedList)\n",
     "            \n",
     "            self.p(\"data[i]=\",data[i])\n",
-    "            #input = data[i].astype('float16')/255\n",
     "            input = data[i].astype('float16')\n",
-    "            #replace label column with 1 for bias\n",
-    "            #input[0] = 1\n",
     "            self.p(\"input=\",input)\n",
     "       \n",
     "            ###################\n",
@@ -152,7 +132,7 @@
     "                self.p(\"output=\",output)\n",
     "                outputNodes.append(output)\n",
     "            \n",
-    "            predictedList.append(outputNodes[0])\n",
+    "            predictedList.append(round(outputNodes[0],1))\n",
     "            self.p(\"outputNodes=\",outputNodes)\n",
     "            self.p(\"predictedList=\",predictedList)\n",
     "            self.p(\"expectedOutputNodeList=\",expectedOutputNodeList)\n",
@@ -229,8 +209,7 @@
     "        self.p(\"np.array(expectedList)=\",np.array(expectedList))\n",
     "        self.p(\"np.array(predictedList))=\",np.array(predictedList))\n",
     "        accuracy = (np.array(expectedList) == np.array(predictedList)).sum()/float(len(expectedList))*100 \n",
-    "        #accuracy = ()\n",
-    "        return outputError\n",
+    "        return accuracy\n",
     "    \n",
     "    def storeLastEpoch(self, expectedList, predictedList):\n",
     "        self.expectedList = expectedList\n",
@@ -253,27 +232,28 @@
     "expectedList = []\n",
     "predictedList = []\n",
     "\n",
-    "\n",
     "results = []\n",
     "inputResults = []\n",
     "\n",
-    "numHiddenNodes = 25\n",
-    "learningRate = .0001\n",
-    "momentum = 0.01\n",
-    "data_train = df_train\n",
+    "numHiddenNodes = 5\n",
+    "learningRate = .1\n",
+    "momentum = .1\n",
+    "data_train = df_train.to_numpy()\n",
     "numInputs = data_train.shape[1]\n",
     "network = NeuralNetwork(data_train.shape[1], numHiddenNodes, learningRate, momentum)\n",
-    "for e in range(100):\n",
+    "for e in range(125):\n",
     "    np.random.shuffle(data_train)\n",
     "    print(\"epoch:\", e)\n",
     "    train_accuracy = network.train(data_train)\n",
     "    print(\"training accuracy:\", train_accuracy)\n",
+    "    results.append([e, train_accuracy])\n",
+    "    test_accuracy = network.test(df_test.to_numpy())\n",
+    "    print(\"testing accuracy:\", test_accuracy)\n",
     "\n",
-    "#print(\"expectedList=\",network.expectedList)\n",
-    "#print(\"predictedList=\", network.predictedList)\n",
+    "print(\"expectedList=\",network.expectedList)\n",
+    "print(\"predictedList=\", network.predictedList)\n",
+    "      \n",
     "\n",
-    "\n",
-    "#epochList.append(epoch)\n",
     "#trainingAccuracyList.append(trainingAccuracy)\n",
     "#testingAccuracyList.append(testingAccuracy)\n",
     "#expectedList.append(perceptron.expectedList)\n",
@@ -287,11 +267,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savetxt(\"results07102022-5.txt\", results, delimiter=\", \")\n",
-    "np.savetxt(\"array0601.txt\", inputResults[0][0], delimiter=\", \")\n",
-    "np.savetxt(\"array0602.txt\", inputResults[0][1], delimiter=\", \")\n",
-    "#np.savetxt(\"array0601.txt\", inputResults[2][0], delimiter=\", \")\n",
-    "#np.savetxt(\"array0602.txt\", inputResults[2][1], delimiter=\", \")"
+    "#print(results)\n",
+    "np.savetxt(\"results.txt\", results, delimiter=\", \")\n"
    ]
   },
   {
@@ -306,7 +283,7 @@
     "plt.legend()\n",
     "plt.show\n",
     "\n",
-    "print(confusion_matrix(expectedList[0], predictedList[0]));"
+    "print(confusion_matrix(expectedList[0], predictedList[0]))\n"
    ]
   },
   {
